Update tiempo-r.html to remove commented out button for showing graph

--- a/admin/tiempo-r.html
+++ b/admin/tiempo-r.html
@@ -34,7 +34,7 @@
                 <!-- Aquí se añadirán los registros dinámicamente -->
             </ul>
         </div>
-        <button class="button" id="showGraph">Gráfica</button>
+        <!--<button class="button" id="showGraph">Gráfica</button> -->
         <button class="button" id="showKnownUsers">Usuarios conocidos</button>
         <button class="button" id="showUnknownUsers">Usuarios desconocidos</button>
     </div>
