--- a/register.html
+++ b/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="/assets/css/reg.css">
   <script defer src="script.js"></script>
 </head>
+
 <body>
   <div class="container">
     <a href="login.html">
@@ -38,6 +40,48 @@
 
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  <script>
+    async function handleSignUp() {
+      const username = document.getElementById('username').value;
+      const phone = document.getElementById('phone').value;
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+
+      // Aquí podrías incluir la lógica para capturar la foto del usuario en formato Base64 si fuera necesario.
+      const photo = "newbase64encodedphoto"; // Reemplaza con la lógica para capturar la foto
+
+      const userData = {
+        nameUser: username,
+        numberUser: phone,
+        emailUser: email,
+        passwordUser: password,
+        roleUser: "user", // Puedes ajustar este valor según sea necesario
+        photoUser: photo
+      };
+
+      try {
+        const response = await fetch('https://lock-face-backend.onrender.com/api/users', { // Reemplaza con tu URL de la API
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify(userData),
+        });
+
+        if (response.ok) {
+          alert('Cuenta creada exitosamente');
+          // Redireccionar o limpiar el formulario si es necesario
+        } else {
+          alert('Hubo un problema al crear la cuenta');
+        }
+      } catch (error) {
+        console.error('Error:', error);
+        alert('Hubo un problema al crear la cuenta');
+      }
+    }
+
+  </script>
 
 </body>
+
 </html>
