--- a/admin/historico.html
+++ b/admin/historico.html
@@ -235,35 +235,26 @@
             document.querySelector('.export-pdf').addEventListener('click', () => {
                 const { jsPDF } = window.jspdf;
                 const doc = new jsPDF();
-                let y = 10;
-                doc.text('Registros de usuarios históricos', 10, y);
-                y += 10;
-                allLogs.forEach(log => {
-                    doc.text(`Acceso por la cámara - ${log.tipo} - Usuario: ${log.usuario} - Hora: ${log.hora} - Día: ${log.dia}`, 10, y);
-                    y += 10;
+
+                doc.text('Registros de Usuarios Históricos', 10, 10);
+
+                allLogs.forEach((log, index) => {
+                    doc.text(`Acceso por la cámara - ${log.tipo} - Usuario: ${log.usuario} - Hora: ${log.hora} - Día: ${log.dia}`, 10, 20 + (index * 10));
                 });
 
-                // Aquí cambiamos la forma de descarga para ser interceptada por Android WebView
-                const pdfDataUri = doc.output('datauristring');
-                window.location.href = `download-file://pdf?data=${encodeURIComponent(pdfDataUri)}`;
+                doc.save('registros_historicos.pdf');
             });
 
             document.querySelector('.export-excel').addEventListener('click', () => {
                 const ws = XLSX.utils.json_to_sheet(allLogs.map(log => ({
-                    Usuario: log.usuario,
                     Tipo: log.tipo,
+                    Usuario: log.usuario,
                     Hora: log.hora,
                     Día: log.dia
                 })));
-
                 const wb = XLSX.utils.book_new();
-                XLSX.utils.book_append_sheet(wb, ws, 'Logs');
-
-                const excelData = XLSX.write(wb, { bookType: 'xlsx', type: 'binary' });
-
-                // Aquí cambiamos la forma de descarga para ser interceptada por Android WebView
-                const excelDataUri = `data:application/vnd.openxmlformats-officedocument.spreadsheetml.sheet;base64,${btoa(excelData)}`;
-                window.location.href = `download-file://excel?data=${encodeURIComponent(excelDataUri)}`;
+                XLSX.utils.book_append_sheet(wb, ws, 'Registros');
+                XLSX.writeFile(wb, 'registros_historicos.xlsx');
             });
         });
 
