feat: Corregir enlaces de navegación en páginas de usuario

--- a/users/historico-u.html
+++ b/users/historico-u.html
@@ -65,11 +65,11 @@
     </div>
 
     <nav class="navbar">
-        <a href="historico.html" class="nav-link active">
+        <a href="historico-u.html" class="nav-link active">
             <ion-icon name="time-outline"></ion-icon>
             <span>Histórico</span>
         </a>
-        <a href="tiempo-r.html" class="nav-link">
+        <a href="tiempo-r-u.html" class="nav-link">
             <ion-icon name="bar-chart-outline"></ion-icon>
             <span>T-R</span>
         </a>
