--- a/users/tiempo-r-u.html
+++ b/users/tiempo-r-u.html
@@ -39,11 +39,11 @@
         <button class="button" id="showUnknownUsers">Usuarios desconocidos</button>
     </div>
     <nav class="navbar">
-        <a href="historico.html" class="nav-link">
+        <a href="historico-u.html" class="nav-link">
             <ion-icon name="time-outline"></ion-icon>
             <span>Histórico</span>
         </a>
-        <a href="tiempo-r.html" class="nav-link active">
+        <a href="tiempo-r-u.html" class="nav-link active">
             <ion-icon name="bar-chart-outline"></ion-icon>
             <span>T-R</span>
         </a>
